--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "next": "11.0.1",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
