--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "dotenv": "^10.0.0",
     "next": "11.0.1",
+    "nodemailer": "^6.6.3",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
