--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
+    "emailjs-com": "^3.2.0",
     "next": "11.0.1",
     "nodemailer": "^6.6.3",
     "nprogress": "^0.2.0",
