--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.12.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "recoil": "^0.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
