--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
     "emailjs-com": "^3.2.0",
+    "gsap": "^3.7.1",
     "next": "11.0.1",
+    "next-transpile-modules": "^8.0.0",
     "nodemailer": "^6.6.3",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
